adicionado script de evento

--- a/cadastro-funcionario/src/cadastro.html
+++ b/cadastro-funcionario/src/cadastro.html
@@ -21,13 +21,15 @@
 
                 <div class="campo">
                     <label for="CPF"><strong>CPF</strong></label>
-                    <input type="text" name="CPF" id="CPF" required>
+                    <input type="text" autocomplete="off" id="CPF" maxlength="14" required>
+                    <script src="./main.js"></script>
 
                 </div>
 
                 <div class="campo">
                     <label for="RG"><strong>RG</strong></label>
-                    <input type="text" name="RG" id="RG">
+                    <input type="text" autocomplete="off" id="RG" maxlength="9">
+                    <script src=".main.js"></script>
                 </div>
 
                 <div class="campo">
