--- a/cadastro-funcionario/src/cadastro.html
+++ b/cadastro-funcionario/src/cadastro.html
@@ -16,20 +16,17 @@
             <form>
                 <div class="campo">
                     <label for="NOME"><strong>NOME COMPLETO</strong></label>
-                    <input type="text" name="NOME" id="NOME" required>
+                    <input type="text" name="NOME" id="nome" required>
                 </div>
 
                 <div class="campo">
                     <label for="CPF"><strong>CPF</strong></label>
-                    <input type="text" autocomplete="off" id="CPF" maxlength="14" required>
-                    <script src="./main.js"></script>
-
+                    <input type="text" autocomplete="off" id="cpf"  required>
                 </div>
 
                 <div class="campo">
                     <label for="RG"><strong>RG</strong></label>
-                    <input type="text" autocomplete="off" id="RG" maxlength="9">
-                    <script src=".main.js"></script>
+                    <input type="text" autocomplete="off" id="rg">
                 </div>
 
                 <div class="campo">
