--- a/cadastro-funcionario/src/cadastro.html
+++ b/cadastro-funcionario/src/cadastro.html
@@ -21,23 +21,16 @@
 
                 <div class="campo">
                     <label for="CPF"><strong>CPF</strong></label>
-<<<<<<< HEAD
                     <input id="cpf" type="text" autocomplete="off"maxlength="14" oninput="this.value(/[^0-9.-]/g,)" required>
                     <script src="./main.js"></script>
 
-=======
-                    <input type="text" autocomplete="off" id="cpf"  required>
->>>>>>> c11b2deda6210f6bbaf452c4f32cce3d59bbcde7
+
                 </div>
 
                 <div class="campo">
                     <label for="RG"><strong>RG</strong></label>
-<<<<<<< HEAD
                     <input id="rg" type="text" autocomplete="off" maxlength="9" oninput="this.value(/[^0-9.-]/g,)" required>
                     <script src=".main.js"></script>
-=======
-                    <input type="text" autocomplete="off" id="rg">
->>>>>>> c11b2deda6210f6bbaf452c4f32cce3d59bbcde7
                 </div>
 
                 <div class="campo">
@@ -55,7 +48,8 @@
 
                 <div class="campo">
                     <label for="FOTO"><strong>FOTO</strong></label>
-                    <input type="image">
+                    <input type="image" id="image"
+                    src="img/avatar.png">
                 </div>
         
                 <button class="botão" type="submit">Concluir</button>
